--- a/401.html
+++ b/401.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Oct 10 2019 00:02:49 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Oct 10 2019 00:57:26 GMT+0000 (UTC)  -->
 <html data-wf-page="5d9a32a26e7b4867b80fa6b1" data-wf-site="5d9362b2232e3636b1a774ba">
 <head>
   <meta charset="utf-8">
@@ -15,8 +15,8 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Poppins:regular,600"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
+  <link href="images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
+  <link href="images/webclip.jpg" rel="apple-touch-icon">
 </head>
 <body>
   <div class="utility-page-wrap">
