--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h3 class="heading">ABOUT ME</h3>
         </div>
         <div>
-          <h1 class="head_about">My name Alex Moldovan. I&#x27;m a THIRD YEAR COMPUTER SIENCE STUDENT PASSIONATE ABOUT machine learning and web design.</h1>
+          <h1 class="head_about">My name is Alex Moldovan. I&#x27;m a THIRD YEAR COMPUTER SIENCE STUDENT PASSIONATE ABOUT machine learning and web design.</h1>
         </div>
         <div class="space-div"></div>
         <div class="title-block">
