fixed borders and text

--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Oct 10 2019 00:57:26 GMT+0000 (UTC)  -->
+
 <html data-wf-page="5d9a32a26e7b4821240fa6b2" data-wf-site="5d9362b2232e3636b1a774ba">
 <head>
   <meta charset="utf-8">
@@ -50,14 +49,14 @@
           <h3 class="heading">PROJECTS</h3>
         </div>
         <div>
-          <h1 class="head_about">tAKE A LOOK AT SOME OF MY COMPLEATED AND ON GOING PROJECTS.</h1>
+          <h1 class="head_about">TAKE A LOOK AT SOME OF MY COMPLEATED AND ON GOING PROJECTS.</h1>
         </div>
         <div class="space-div"></div>
         <div class="project-cont">
           <div class="proj-title-div">
             <div class="proj-title"></div>
             <div class="proj-desc w-clearfix">
-              <p class="paragraph">An application that lets you see anonymously a friend or family members wish list to get the best gift. This was a final group project completed where I was excited to be the design lead. The whole team pitched in ideas and we narrowed the best design and I was able to bring it to life while other members work on back-end and other functional tasks.</p>
+              <p class="paragraph">An application that lets you see a friend/family members' wish list in order to get the perfect gift. This was a final group project and I was able to be lead designer. The whole team pitched in ideas during prototyping phase and we chose the best features to incorporate. Below you can see the high-fidelity prototype design. </p>
             </div>
           </div>
           <div data-animation="slide" data-hide-arrows="1" data-duration="500" data-infinite="1" class="w-slider">
