--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-
+<!--  This site was created in Webflow. http://www.webflow.com  -->
+<!--  Last Published: Mon Oct 14 2019 20:06:24 GMT+0000 (UTC)  -->
 <html data-wf-page="5d9a32a26e7b4821240fa6b2" data-wf-site="5d9362b2232e3636b1a774ba">
 <head>
   <meta charset="utf-8">
@@ -56,7 +57,7 @@
           <div class="proj-title-div">
             <div class="proj-title"></div>
             <div class="proj-desc w-clearfix">
-              <p class="paragraph">An application that lets you see anonymously a friend or family members wish list to get the best gift. This was a final group project completed where I was excited to be the design lead. The whole team pitched in ideas and we narrowed the best design and I was able to bring it to life while other members work on back-end and other functional tasks.</p>
+              <p class="paragraph">An application that lets you see anonymously a friend or family members wish list to get the best gift. This was a final group project completed where I was excited to be the design lead. The whole team pitched in ideas and we narrowed the best design and I was able to bring it to create a high fidelity prototype while other members work on back-end and other functional tasks.</p>
             </div>
           </div>
           <div data-animation="slide" data-hide-arrows="1" data-duration="500" data-infinite="1" class="w-slider">
@@ -77,9 +78,34 @@
         </div>
         <div class="space-div"></div>
         <div class="project-cont">
+          <div class="proj-title-div proj3red">
+            <div class="proj-title proj3">
+              <h2 class="heading-5">Crescendo</h2>
+            </div>
+            <div class="proj-desc w-clearfix">
+              <p class="paragraph">Crescendo is my podcasting platform idea and 2nd place winner at the uOttawa Startup Weekend (2017). It brings together traditional podcast listening and contemporary social media interaction. Designed the interface of the application and user functionality for playing podcasts, profile creation and sharing podcast snippets.</p>
+            </div>
+          </div>
+          <div data-animation="slide" data-hide-arrows="1" data-duration="500" data-infinite="1" class="w-slider">
+            <div class="mask w-slider-mask">
+              <div class="slide-1 proj3slide w-slide"></div>
+              <div class="slide-2 w-slide"></div>
+              <div class="slide-3 w-slide"></div>
+            </div>
+            <div class="w-slider-arrow-left">
+              <div class="slider-arrow w-icon-slider-left"></div>
+            </div>
+            <div class="w-slider-arrow-right">
+              <div class="slider-arrow w-icon-slider-right"></div>
+            </div>
+            <div class="w-slider-nav w-slider-nav-invert w-shadow w-round"></div>
+          </div>
+        </div>
+        <div class="space-div"></div>
+        <div class="project-cont">
           <div class="proj-title-div proj2green">
             <div class="proj-title proj2">
-              <h2>VaciRec</h2>
+              <h2 class="heading-6">VaciRec</h2>
             </div>
             <div class="proj-desc w-clearfix">
               <p class="paragraph">First HTML5/CSS3 project I have designed: a website that keeps track of vaccines much like an immunization record for all family members. <br>‍</p>
