--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-
+<!--  This site was created in Webflow. http://www.webflow.com  -->
+<!--  Last Published: Mon Oct 14 2019 20:06:24 GMT+0000 (UTC)  -->
 <html data-wf-page="5d9a32a26e7b4865110fa6ad" data-wf-site="5d9362b2232e3636b1a774ba">
 <head>
   <meta charset="utf-8">
@@ -47,7 +48,7 @@
           <h3 class="heading">ABOUT ME</h3>
         </div>
         <div>
-          <h1 class="head_about">My name is Alex Moldovan. I&#x27;m a THIRD YEAR COMPUTER SCIENCE STUDENT PASSIONATE ABOUT machine learning and web design.</h1>
+          <h1 class="head_about">My name is Alex Moldovan. I&#x27;m a THIRD YEAR COMPUTER ScIENCE STUDENT PASSIONATE ABOUT machine learning and web design.</h1>
         </div>
         <div class="space-div"></div>
         <div class="title-block">
@@ -59,7 +60,7 @@
               <div class="w-col w-col-3">
                 <div class="title_block2 skill_title green">Front End</div>
                 <ul class="list">
-                  <li>Java Script </li>
+                  <li>JavaScript </li>
                   <li>HTML5</li>
                   <li>HTML Semantics</li>
                   <li>CSS3</li>
