--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h3 class="heading">ABOUT ME</h3>
         </div>
         <div>
-          <h1 class="head_about">My name is Alex Moldovan. I&#x27;m a THIRD YEAR COMPUTER ScIENCE STUDENT PASSIONATE ABOUT machine learning and web design.</h1>
+          <h1 class="head_about">My name is Alex Moldovan. I&#x27;m a FOURTH YEAR COMPUTER SCIENCE STUDENT PASSIONATE ABOUT UX/UI DESIGN & WEB DEVELOPMENT.</h1>
         </div>
         <div class="space-div"></div>
         <div class="title-block">
@@ -90,6 +90,7 @@
                 <ul class="list">
                   <li>Adobe Suit</li>
                   <li>Sketch Design</li>
+                  <li>Figma</li>
                 </ul>
               </div>
             </div>
@@ -112,7 +113,7 @@
               </div>
               <div class="w-col w-col-5 w-col-small-4 w-col-tiny-4">
                 <div>
-                  <div class="title_block2 position">Patient Service Clerk </div>
+                  <div class="title_block2 position"><b>Patient Service Clerk</b></div>
                 </div>
               </div>
             </div>
@@ -130,7 +131,7 @@
               </div>
               <div class="w-col w-col-5 w-col-small-4 w-col-tiny-4">
                 <div class="position">
-                  <div class="title_block2 position">Creative Marketing Lead</div>
+                  <div class="title_block2 position"><b>Creative Marketing Lead</b></div>
                 </div>
               </div>
             </div>
@@ -148,7 +149,7 @@
               </div>
               <div class="w-col w-col-5 w-col-small-4 w-col-tiny-4">
                 <div>
-                  <div class="title_block2 position">Research Coordinator</div>
+                  <div class="title_block2 position"><b>Research Coordinator</b></div>
                 </div>
               </div>
             </div>
@@ -172,7 +173,7 @@
               </div>
               <div class="w-col w-col-5 w-col-small-4 w-col-tiny-4">
                 <div>
-                  <div class="title_block2">BSc Computer Science &amp; Statistics</div>
+                  <div class="title_block2"><b>BSc Computer Science &amp; Statistics</b></div>
                 </div>
               </div>
             </div>
@@ -190,7 +191,7 @@
               </div>
               <div class="w-col w-col-5 w-col-small-4 w-col-tiny-4">
                 <div>
-                  <div class="title_block2">BSc Specialization in Biology</div>
+                  <div class="title_block2"><b>BSc Specialization in Biology</b></div>
                 </div>
               </div>
             </div>
@@ -198,7 +199,7 @@
           </div>
         </div>
         <div class="line_div"></div>
-        <div class="center_align"><a href="documents/A.Moldovan-CV.CSI-Oct.2019.pdf" target="_blank" class="cv_button w-button">Download Resume</a></div>
+        <div class="center_align"><a href="documents/A.Moldovan-CV.CSI-Jan.2021.pdf" target="_blank" class="cv_button w-button">Download Resume</a></div>
         <div class="space-div"></div>
       </div>
     </div>
