--- a/projects.html
+++ b/projects.html
@@ -50,12 +50,93 @@
           <h3 class="heading">PROJECTS</h3>
         </div>
         <div>
-          <h1 class="head_about">tAKE A LOOK AT SOME OF MY COMPLEATED AND ON GOING PROJECTS.</h1>
+          <h1 class="head_about">TAKE A LOOK AT SOME OF MY COMPLEATED AND ON GOING PROJECTS.</h1>
         </div>
+
+        <div class="space-div"></div>
+        <div class="project-cont">
+          <div class="proj-title-div proj5purp">
+            <div class="proj-title proj5">
+              <h2 class="heading-5">Logos</h2>
+            </div>
+            <div class="proj-desc w-clearfix">
+              <p class="paragraph">Here are some logos, that I am proud of, which helped bring value to the respective brand: </p>
+            </div>
+          </div>
+          <div data-animation="slide" data-hide-arrows="1" data-duration="500" data-infinite="1" class="w-slider">
+            <div class="mask w-slider-mask">
+              <div class="slide-1 projlogoslide w-slide"></div>
+              <div class="slide-2 projlogoslide2 w-slide"></div>
+              <div class="slide-3 projlogoslide3 w-slide"></div>
+            </div>
+            <div class="w-slider-arrow-left">
+              <div class="slider-arrow w-icon-slider-left"></div>
+            </div>
+            <div class="w-slider-arrow-right">
+              <div class="slider-arrow w-icon-slider-right"></div>
+            </div>
+            <div class="w-slider-nav w-slider-nav-invert w-shadow w-round"></div>
+          </div>
+        </div>
+
+        <div class="space-div"></div>
+        <div class="project-cont">
+          <div class="proj-title-div proj5blue">
+            <div class="proj-title proj5">
+              <h2 class="heading-5">FixIt</h2>
+            </div>
+            <div class="proj-desc w-clearfix">
+              <p class="paragraph">An augmented reality solution for repair and maintenance of campus facilities. Asset management systems can be complicated to use and bigger campuses can miss many issues especially if maintenance staff-size isn’t sufficient. FixIt harnesses the power of the student community along with other staff members to efficiently identify and report maintenance issues. </p>
+            </div>
+          </div>
+          <div data-animation="slide" data-hide-arrows="1" data-duration="500" data-infinite="1" class="w-slider">
+            <div class="mask w-slider-mask">
+              <div class="slide-1 proj5slide w-slide"></div>
+              <div class="slide-2 proj5slide2 w-slide"></div>
+              <div class="slide-3 proj5slide3 w-slide"></div>
+            </div>
+            <div class="w-slider-arrow-left">
+              <div class="slider-arrow w-icon-slider-left"></div>
+            </div>
+            <div class="w-slider-arrow-right">
+              <div class="slider-arrow w-icon-slider-right"></div>
+            </div>
+            <div class="w-slider-nav w-slider-nav-invert w-shadow w-round"></div>
+          </div>
+        </div>
+
+        <div class="space-div"></div>
+        <div class="project-cont">
+          <div class="proj-title-div proj5cyan">
+            <div class="proj-title proj5">
+              <h2 class="heading-5">Walk With Me</h2>
+            </div>
+            <div class="proj-desc w-clearfix">
+              <p class="paragraph">Walk with me was a submission for uOttaHack where our goal was to solve a transportation issue by creating an app where students could request walking buddies when not comfortable walking home alone. The simple design proved that it could clearly be used anytime and the main safety feature an S.O.S. call was always accessible.</p>
+            </div>
+          </div>
+          <div data-animation="slide" data-hide-arrows="1" data-duration="500" data-infinite="1" class="w-slider">
+            <div class="mask w-slider-mask">
+              <div class="slide-1 proj4slide w-slide"></div>
+              <div class="slide-2 proj4slide2 w-slide"></div>
+              <div class="slide-3 proj4slide3 w-slide"></div>
+            </div>
+            <div class="w-slider-arrow-left">
+              <div class="slider-arrow w-icon-slider-left"></div>
+            </div>
+            <div class="w-slider-arrow-right">
+              <div class="slider-arrow w-icon-slider-right"></div>
+            </div>
+            <div class="w-slider-nav w-slider-nav-invert w-shadow w-round"></div>
+          </div>
+        </div>
+
         <div class="space-div"></div>
         <div class="project-cont">
           <div class="proj-title-div">
-            <div class="proj-title"></div>
+            <div class="proj-title proj5">
+              <h2 class="heading-5">Wish List</h2>
+            </div>
             <div class="proj-desc w-clearfix">
               <p class="paragraph">An application that allows you to see a friend or a family members&#x27; wish list, anonymously, to get them the best gift. My role, on this project, was design lead. The whole team pitched in ideas as we narrowed down to the best design. I was responsible of creating a high fidelity prototype using Sketch &amp; Android Studio. Other members worked on back-end and other functional tasks.</p>
             </div>
