--- a/projects.html
+++ b/projects.html
@@ -65,9 +65,9 @@
           </div>
           <div data-animation="slide" data-hide-arrows="1" data-duration="500" data-infinite="1" class="w-slider">
             <div class="mask w-slider-mask">
-              <div class="slide-1.projlogoslide w-slide"></div>
-              <div class="slide-2.projlogoslide2 w-slide"></div>
-              <div class="slide-3.projlogoslide3 w-slide"></div>
+              <div class="slide-1 projlogoslide w-slide"></div>
+              <div class="slide-2 projlogoslide2 w-slide"></div>
+              <div class="slide-3 projlogoslide3 w-slide"></div>
             </div>
             <div class="w-slider-arrow-left">
               <div class="slider-arrow w-icon-slider-left"></div>
